2015-03-01  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c: Minor fix of copy_area().

	* ml_char.c: Arguments of COMPOUND_ATTR() are fixed.

2015-02-28  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: DECBI, DECFI, DECIC, DECDC, DECST8C, DECSACE,
	  DECRARA and DECCARA are supported.

	* ml_screen.c: 'scroll' argument is added to ml_screen_go_{forward|back}().

	* ml_edit.[ch]:
	  - ml_edit_scroll_{left|right}ward_from_cursor() are added.
	  - ml_edit_change_attr_area() is added.
	  - ml_edit_set_use_rect_attr_select() is added.
	  - {h|v}margins are applied in ml_edit_go_forward().
	  - scroll_region_{beg|end} => vmargin_{beg|end}
	    margin_{beg|end} => hmargin_{beg|end}

	* ml_line.c: ml_line_{overwrite|fill}() allows 'beg_char_index' argument
	  to exceed line->num_of_filled_chars.

	* ml_char.[ch]: ml_char_{change|reverse}_attr() are added.

2015-02-25  Araki Ken  <arakiken@users.sf.net>

	* gtk/INSTALL: Updated.

	* ml_term_manager.c, xlib/x_window.c: Minor fixes.

2015-02-22  Araki Ken  <arakiken@users.sf.net>

	* vte.c: vte_get_{major|minor|micro}_version() are implemented.

2015-02-22  Araki Ken  <arakiken@users.sf.net>

	* vte.c: gtk_widget_set_visual(toplevel window, rgba_visual) is called
	  in vte_terminal_hierarchy_changed() to enable true transparency forcibly
	  on vte-2.91.

2015-02-21  Araki Ken  <arakiken@users.sf.net>

	* configure.in:
	  LIBVTE_SUFFIX=2.91 -> LIBVTE_SUFFIX=-2.91

	* vte.c:
	  - Compiling error in vte_terminal_feed() is fixed.
	    (enbugged at the previous commit.)
	  - vte_terminal_get_geometry_hints() is implemented.
	  - vte_terminal_{set|get}_input_enabled() are added.
	  - vte_terminal_screen_changed() event handler is added.
	  - "inner-border" style is removed since vte 0.38.0.

	* vtetypebuiltins.c: vte-2.91 types are added.

2015-02-20  Araki Ken  <arakiken@users.sf.net>

	* gtk/INSTALL: Updated.

	* man/mlterm.1, doc/ja/README.ja, etc/main, etc/main.ja: Updated.
